tests/NormalTests/paczka1/fuzzy1/39703437.err
Error in line 6: 6mXnKodHNo A486 11,9
Error in line 3: 4tZ6X8kJq5e A486 77,1
Error in line 23: nIi4 S195 92,6
Error in line 9: 6mXnKodHNo S70 30,3
Error in line 28: BFAb A462 25,5
